Add grid formatting, photos, and copy

--- a/index.html
+++ b/index.html
@@ -11,40 +11,98 @@
   <body>
     <div class="header-logo">
         <a href="https://glissadedanceco.com">
-            <img src="https://via.placeholder.com/350x150">
+            <img src="./glissade.png">
         </a>
     </div>
     <main>
+        <div class="grid-section classes-general">
+            <h1>General Class information</h1>
+            <p>All adult and youth classes take place at Ballet Co. Laboratory (276 E Lafayette Frontage Road,
+                Saint Paul, MN 55107).
+            </p>
+            <p>
+                I believe in affordable dance education, so additional uniforms/costumes or supplies are not
+                needed. All dancers should wear close fitting apparel such as leggings/yoga pants/shorts or slim
+                fit items and non-baggy tops (this allows students to see their body lines to learn better and
+                keeps them safe while dancing). Students should also plan to be bare footed, however if shoes
+                are desired due to feet sensitivity or for extra support, please reach out to me and I can
+                recommend a couple cost effective options and where to get them. Please also bring a full
+                water bottle.
+            </p>
+            <p>
+        </div>
         <div class="grid-section youth-classes">
             <h1>Youth Classes</h1>
             <h2>1st-5th</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida cum sociis natoque penatibus et magnis dis. Ultrices tincidunt arcu non sodales neque sodales ut. Id porta nibh venenatis cras sed felis eget velit. Orci eu lobortis elementum nibh. Vitae suscipit tellus mauris a diam maecenas sed enim ut. Ante metus dictum at tempor. Faucibus a pellentesque sit amet porttitor eget dolor morbi.</p>
+            <p>Tuesdays 6:30-7:30pm</p>
+            <p>13 sessions- $150</p>
+            <p>September 13th, 20th, 27th, October 4th, 11th, 18th, 25th, November 1st, 8th, 15th, December 6th, 13th</p>
+            <p>In this class, we will focus on foundational dance movement to help students feel comfortable with dance technique. 
+                Students will learn a dance piece throughout the semester to showcase what they have learned. 
+                All learning levels are welcome, and students with previous dance experience will not be bored. 
+                If your student is a 5 th grader and has advance skill, I am happy to have them join us in the 6 th -12 th grade class.</p>
                 <form action="https://google.com">
                     <button type="button" id="1-5-register">Register</button>
                 </form>
             <h2>6th-12th</h2>
-            <p>Mattis pellentesque id nibh tortor id aliquet lectus proin. Aliquam ultrices sagittis orci a scelerisque purus. Nulla at volutpat diam ut venenatis tellus in. Sit amet consectetur adipiscing elit duis. Non curabitur gravida arcu ac tortor dignissim convallis aenean et. Lectus magna fringilla urna porttitor rhoncus dolor. Interdum velit laoreet id donec ultrices tincidunt. Aliquet enim tortor at auctor. Risus in hendrerit gravida rutrum quisque non tellus. Malesuada pellentesque elit eget gravida cum sociis. Non odio euismod lacinia at quis risus sed.</p>
+            <p>Tuesdays 7:30-8:30pm</p>
+            <p>13 sessions- $150</p>
+            <p>September 13th, 20th, 27th, October 4th, 11th, 18th, 25th, November 1st, 8th, 15th, December 6th, 13th</p>
+            <p>In this class, we will build upon foundational dance movement to help students continue to
+                grow in their dance experience. They will also be challenged to try new movement and
+                combinations. Students will learn a dance piece throughout the semester to showcase what
+                they have learned. All learning levels are welcome, as students at each level will be able to
+                showcase and grow in their abilities.</p>
                 <form action="https://google.com">
                     <button type="button" id="6-12-register">Register</button>
                 </form>
         </div>
         <div class="grid-section adult-classes">
             <h1>Adult Classes</h1>
-            <p>Odio ut sem nulla pharetra diam sit amet. Urna condimentum mattis pellentesque id nibh tortor. Integer feugiat scelerisque varius morbi. Est ante in nibh mauris cursus mattis. Pulvinar sapien et ligula ullamcorper malesuada proin libero. Nisl purus in mollis nunc sed id. Urna nunc id cursus metus aliquam eleifend mi in. In dictum non consectetur a erat nam at lectus. Morbi leo urna molestie at elementum eu facilisis. Rhoncus dolor purus non enim praesent elementum.</p>
+            <p>Sundays 4-5pm</p>
+            <p>13 sessions- $150</p>
+            <p>September 18th, 25th, October 2nd, 16th, 23rd, 30th, November 6th, 13th, 20th, December 4th, 11th, 18th</p>
+            <p>In this class, we will focus on movement that feels uplifting and encouraging through small
+                combos (across the floor) as well as learning a full dance piece together. All learning levels and
+                experience are welcome, this is a no judgement zone where we are coming together to have
+                fun, and leave feeling good!</p>
                 <form action="https://google.com">
                     <button type="button" id="adult-register">Register</button>
                 </form>
         </div>
-        <div class="grid-section questions">
-            <h1>Questions?</h1>
-            <p>In est ante in nibh mauris cursus mattis molestie a. Viverra justo nec ultrices dui sapien eget mi proin sed. Cursus turpis massa tincidunt dui ut. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Sagittis eu volutpat odio facilisis mauris sit amet. Faucibus vitae aliquet nec ullamcorper. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Enim facilisis gravida neque convallis a cras. Ut etiam sit amet nisl. Elit sed vulputate mi sit. Bibendum enim facilisis gravida neque convallis a cras semper auctor. Odio ut enim blandit volutpat maecenas volutpat. Eleifend donec pretium vulputate sapien nec.</p>
-            <p>Phone: 555-555-5555</p>
-            <p>Email: dancydance@dance.com</p>
-        </div>
         <div class="grid-section bio">
             <h1>Bio</h1>
-            <p>Tellus cras adipiscing enim eu turpis egestas. Diam vel quam elementum pulvinar. Mi ipsum faucibus vitae aliquet. Magna sit amet purus gravida quis blandit turpis cursus in. Tortor at auctor urna nunc id. Semper risus in hendrerit gravida rutrum quisque. Turpis egestas maecenas pharetra convallis posuere morbi leo urna. Egestas fringilla phasellus faucibus scelerisque eleifend. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Auctor urna nunc id cursus. Lacus suspendisse faucibus interdum posuere. Enim blandit volutpat maecenas volutpat blandit. Libero enim sed faucibus turpis in eu. Ultrices neque ornare aenean euismod elementum. Malesuada nunc vel risus commodo viverra. Dolor purus non enim praesent elementum facilisis leo. Morbi quis commodo odio aenean. Nulla malesuada pellentesque elit eget gravida cum.</p>
-            <p>Sed turpis tincidunt id aliquet risus feugiat in ante metus. Ultrices vitae auctor eu augue ut lectus arcu bibendum at. Lobortis mattis aliquam faucibus purus in. Turpis tincidunt id aliquet risus feugiat in. Mauris pellentesque pulvinar pellentesque habitant morbi. Molestie a iaculis at erat pellentesque adipiscing commodo. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Egestas purus viverra accumsan in nisl. Neque convallis a cras semper. Porta nibh venenatis cras sed felis eget. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Cursus euismod quis viverra nibh cras pulvinar mattis. Ac tincidunt vitae semper quis lectus nulla at volutpat diam. Bibendum at varius vel pharetra vel turpis. Eget nulla facilisi etiam dignissim diam. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Velit sed ullamcorper morbi tincidunt.</p>
+            <div class="headshot-img">
+                <img src="headshot.jpeg">
+            </div>
+            <p>Hi, I’m Bethany, and I am so glad you are here!</p>
+            <p>I live in Roseville with my husband and our dog
+                Piper, who is a husky and golden retriever mix. By day I work at a church in White Bear Lake as
+                a youth director for kids ages 3-18 and in the evening, I like to be involved with dance or
+                theatre, hang with friends, go on an adventure or enjoy a night in.</p>
+            <p>I have trained in modern,
+                contemporary, jazz, tap, musical theatre, and hip hop dance styles not only as an adolescent,
+                but also in my adult career at Moorhead State University, Concordia University and Zenon
+                Dance. During my time at Concordia, I was encouraged to take a choreography class by my
+                dance professor, and it opened a whole new world to me of creating and teaching. I have had 8
+                original choreographed pieces produced and have also choreographed for a couple children’s
+                theaters in the Twin Cities area.</p>
+            <p>The instruction and care shown to me by my dance teachers
+                has shaped part of who I am today, kept my love for dance strong and has shown me what
+                sharing your passion with students looks like. My style of teaching is rooted in a solid
+                foundation of dance basics, as that is where all movement begins. However, it is not where it
+                stops, and so I share with students that there is an endless world of possibilities when it comes
+                to movement.</p>
+            <p>Students learn not only the core basics that will shape them into a well
+                experienced dancer, but that dance is truly an expression of story, experience and often what
+                cannot be put into words. Beyond that, I have a passion for showing every person that I meet
+                that they are loved, valued and important, and that shapes the way I teach as well. I hope to
+                meet you soon! (P.S. if you would like a copy of my background check, feel free to email me and
+                ask- <a href="glissadedanceco@gmail.com">glissadedanceco@gmail.com</a>).</p>
+        </div>
+        <div class="grid-section questions">
+            <h1>Questions?</h1>
+            <p>Any other questions? Please do not hesitate to reach out to me- <a href="mailto:glissadedanceco@gmail.com">glissadedanceco@gmail.com</a></p>
         </div>
     </main>
 	<script src="index.js"></script>
